2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (parse_char_stream): Make |set_next_char|
	invoke |manakai_read_until|, not only |read|, where
	possible, to decrease the number of |read| method calls.

	* mkhtmlparser.pl: Related changes to the aforementioned
	modification.

2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Use |read| instead of |getc|.  |set_inner_html|
	would report character error from now.

2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: White-space-leaded non-white-space character
	tokens in "before head insertion mode" was not
	correctly handled.
	(set_inner_html): Reimplemented using CharString decodehandle
	class.  Support for $get_wrapper argument.  Support
	for |{read_until}| feature.

2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Make a "bare ero" error for unknown
	entities point the "&" character.

2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: It turns out that U+FFFD don't have to
	be added to the list of excluded characters.

2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src ($char_onerror): Have character decoder's |line|
	and |column| a higher priority than the one set by the
	tokenizer's input handler.
	($self->{read_until}): Exclude U+FFFD (but this might
	not be necessary, since now we do line/column fixup in
	the character decode handle).

2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Use |{read_until}| where possible.

2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Change |{getc_until}| to |{read_until}|
	and |manakai_getc_until| to |manakai_read_until| to
	reduce the number of string copies.

2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (parse_char_string): Use newly created
	|Whatpm::Charset::DecodeHandle::CharString| instead of Perl's
	standard feature to |open| a string as a filehandle,
	since Perl's string filehandle seems not supporting |ungetc|
	method correctly.
	(parse_char_stream): Define |{getc_until}| method.