@@ -1,7 +1,7 @@
 1..1073
 # Running under perl version 5.008007 for linux
-# Current time local: Sun Sep 14 18:02:03 2008
-# Current time GMT:   Sun Sep 14 09:02:03 2008
+# Current time local: Sun Sep 14 23:31:28 2008
+# Current time GMT:   Sun Sep 14 14:31:28 2008
 # Using Test.pm version 1.25
 # t/tokenizer/test1.test
 ok 1
